--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  firebase_core: ^3.13.1
 
 dev_dependencies:
   flutter_test:
